changed margin-top to just margin to fix left side gap for nav

--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ footer {
     opacity: 0.6;
     color: white;
     text-transform: uppercase;
-    margin-top: -2px;
+    margin: -2px;
 }
 
 #nav.scroll {
